--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="El futuro en administracion de Gym's"
+      image="%PUBLIC_URL%/PG1.png"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="image"
+      property="og:image"
+      content="%PUBLIC_URL%/PG1.png"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/PG1.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
