se optimizan rutas para deploy, entre otras cosas

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
     <meta
       name="image"
       property="og:image"
-      content="%PUBLIC_URL%/PG1.png"
+      content="https://pgym.coderbox.com.ar/PG1.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/PG1.png" />
     <!--
